force-app/main/default/objects/JT_PersonaConfig__mdt/JT_PersonaConfig__mdt.object-meta.xml
<CustomObject>
    <description
  >Defines a reusable persona (Profile + Permission Sets) for Run As testing without requiring a real named user. Used by JT_GenericRunAsTest and JT_GenericPersonaTest to create synthetic users in @IsTest context.</description>
    <label>JT Persona Config</label>
    <pluralLabel>JT Persona Configs</pluralLabel>
</CustomObject>