force-app/main/default/objects/JT_PersonaConfig__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of the persona shown in the UI selector (e.g., "Sales Rep with territory access"). Used as the display label in jtRunAsSection combobox.</description>
    <inlineHelpText>This text appears as the option label in the Persona selector dropdown.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>TextArea</type>
</CustomField>