force-app/main/default/objects/JT_PersonaConfig__mdt/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <description>Comma-separated list of Permission Set API names to assign to the synthetic test user. Maximum 10 recommended to stay within DML row governor limits.</description>
    <inlineHelpText>Example: Territory_Manager,Pipeline_Access,Reports_Viewer — comma-separated, no spaces. Leave blank if no Permission Sets are needed.</inlineHelpText>
    <label>Permission Sets</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>