force-app/main/default/objects/JT_PersonaConfig__mdt/fields/Profile_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_API_Name__c</fullName>
    <description
  >API name of the Salesforce Profile to assign to the synthetic test user (e.g., Standard_User, Sales_User). Must exist in the target org.</description>
    <inlineHelpText
  >Example: Standard_User — must match the Profile Name exactly as it appears in Setup > Profiles.</inlineHelpText>
    <label>Profile API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>