force-app/main/default/objects/JT_PersonaConfig__mdt/fields/See_All_Data__c.field-meta.xml
<CustomField>
    <fullName>See_All_Data__c</fullName>
    <description
  >Controls whether the test runs with @IsTest(SeeAllData=true) to validate real data volume, or SeeAllData=false to validate FLS/CRUD/object access only. Default false is recommended for ISV use cases.</description>
    <inlineHelpText
  >false = validates FLS/CRUD/object access only (no real data required). true = validates that the persona can see real records (requires data in org).</inlineHelpText>
    <label>See All Data</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>